# DiodeScoutUI

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README  README.md
docs/: HOWTO_macOS_icns.txt  HOWTO_windeploy.txt  _config.yml  index.md  sitemap.txt
icons/: appicon.icns
src/: coredatatypes.cpp  coredatatypes.h  datamanager.cpp  datamanager.h  main.cpp  mainwindow.cpp  mainwindow.h  measurementdata.cpp  measurementdata.h  mychartview.cpp  mychartview.h  serialparser.cpp  serialparser.h
